Adding hasVolumes to summary.